# rtl66

./: ChangeLog  INSTALL  LICENSE.md  NEWS  README.md  RELNOTES  TODO  functionality.text  meson.build  meson.options  work.sh
doc/: README  RtMidiLicense.text  jack_calls.ods  meson.build
doc/dia/: rtl66-high-level.dia  rtl66.dia  tracks.dia
doc/latex/: generate_pdf.sh  make_pdf.sh  meson.build
doc/latex/tex/: docs-structure.tex  high-level.tex  midi-meta-and-sysex.tex  references.tex  rtl66-dev-manual.tex  walkthrough.tex
doc/pdf/: README
extras/: README  meson.build.alt
extras/gdb/: gdbinit
extras/headers/: cpp_types.hpp
extras/notes/: MIDNAM.text  c-notes.text  constructors.text  debug-notes.text  linkage.text  member-mappings.text  meson.text  midi-time-code.text  modules.text  port-containers.text  sequence.text  trace.text
extras/scripts/: cgdb-wide  cgdbrc  mbytes.sed
extras/vim/: cpp.vim  gvim.rc
extras/wraps/: rtl66.wrap
include/: README  meson.build  rtl66-config.h.in
include/midi/: README  bus.hpp  bus_in.hpp  bus_out.hpp  busarray.hpp  bussdata.hpp  calculations.hpp  clientinfo.hpp  clocking.hpp  event.hpp  eventcodes.hpp  eventlist.hpp  file.hpp  masterbus.hpp  measures.hpp  message.hpp  midibytes.hpp  player.hpp  port.hpp  portnaming.hpp  ports.hpp  splitter.hpp  timing.hpp  track.hpp  trackdata.hpp  trackdataex.hpp  trackinfo.hpp  tracklist.hpp
include/rtl/: api_base.hpp  iothread.hpp  rt_types.hpp  rterror.hpp  rtl_build_macros.h  test_helpers.hpp
include/rtl/audio/: README  audio_api.hpp  audio_support.hpp  rt_audio_types.hpp  rtaudio.hpp
include/rtl/audio/alsa/: audio_alsa.hpp
include/rtl/audio/jack/: audio_jack.hpp
include/rtl/midi/: README  find_midi_api.hpp  midi_api.hpp  midi_dummy.hpp  midi_queue.hpp  rt_midi_types.hpp  rtmidi.hpp  rtmidi_c.h  rtmidi_engine.hpp  rtmidi_in.hpp  rtmidi_in_data.hpp  rtmidi_out.hpp
include/rtl/midi/alsa/: midi_alsa.hpp  midi_alsa_data.hpp
include/rtl/midi/jack/: midi_jack.hpp  midi_jack_callbacks.hpp  midi_jack_data.hpp
include/rtl/midi/macosx/: midi_macosx_core.hpp
include/rtl/midi/pipewire/: midi_pipewire.hpp
include/rtl/midi/webmidi/: midi_web_midi.hpp
include/rtl/midi/winmm/: midi_win_mm.hpp  midi_win_mm_data.hpp
include/seq66/: meson.build  seq66-config.h.in
include/seq66/midi/: seqspec.hpp  trackdata.hpp
include/seq66/play/: clockslist.hpp  inputslist.hpp  metro.hpp  mutegroup.hpp  mutegroups.hpp  notemapper.hpp  performer.hpp  playlist.hpp  portslist.hpp  screenset.hpp  seq.hpp  sequence.hpp  setmapper.hpp  setmaster.hpp  songsummary.hpp  triggers.hpp
include/seq66/session/nsm/: clinsmanager.hpp
include/session/: rtlconfiguration.hpp  rtlmanager.hpp
include/transport/: README  info.hpp
include/transport/clock/: info.hpp
include/transport/jack/: info.hpp  scratchpad.hpp  transport.hpp
po/: README  es.po  messages.po
src/: meson.build
src/midi/: README  bus.cpp  bus_in.cpp  bus_out.cpp  busarray.cpp  bussdata.cpp  calculations.cpp  clientinfo.cpp  event.cpp  eventcodes.cpp  eventlist.cpp  file.cpp  manuf_ids.cpp  masterbus.cpp  message.cpp  midibytes.cpp  player.cpp  port.cpp  portnaming.cpp  ports.cpp  splitter.cpp  track.cpp  trackdata.cpp  trackdataex.cpp  trackinfo.cpp  tracklist.cpp
src/rtl/: api_base.cpp  iothread.cpp  test_helpers.cpp
src/rtl/audio/: README  audio_api.cpp  audio_support.cpp  rtaudio.cpp
src/rtl/audio/alsa/: audio_alsa.cpp
src/rtl/audio/jack/: audio_jack.cpp
src/rtl/midi/: README  find_midi_api.cpp  midi_api.cpp  midi_dummy.cpp  midi_queue.cpp  rtmidi.cpp  rtmidi_c.cpp  rtmidi_engine.cpp  rtmidi_in.cpp  rtmidi_in_data.cpp  rtmidi_out.cpp
src/rtl/midi/alsa/: midi_alsa.cpp  midi_alsa_data.cpp
src/rtl/midi/jack/: midi_jack.cpp  midi_jack_callbacks.cpp  midi_jack_data.cpp
src/rtl/midi/macosx/: midi_macosx_core.cpp
src/rtl/midi/pipewire/: midi_pipewire.cpp
src/rtl/midi/webmidi/: midi_web_midi.cpp
src/rtl/midi/winmm/: midi_win_mm.cpp  midi_win_mm_data.cpp
src/seq66/: README  meson.build
src/seq66/midi/: seqspec.cpp  trackdata.cpp
src/seq66/play/: clockslist.cpp  inputslist.cpp  metro.cpp  mutegroup.cpp  mutegroups.cpp  notemapper.cpp  performer.cpp  playlist.cpp  portslist.cpp  screenset.cpp  seq.cpp  sequence.cpp  setmapper.cpp  setmaster.cpp  songsummary.cpp  triggers.cpp
src/seq66/session/: defaults.cpp
src/seq66/session/nsm/: clinsmanager.cpp
src/session/: rtlconfiguration.cpp  rtlmanager.cpp
src/transport/: README  info.cpp
src/transport/clock/: info.cpp
src/transport/jack/: info.cpp  scratchpad.cpp  transport.cpp
subprojects/: README  libcfg66.wrap  liblib66.wrap  libxpc66.wrap
tests/: meson.build
tests/audio/: README
tests/data/midi/: simpleblast-ch1-8th-notes-960-out.midi  simpleblast-ch1-8th-notes-out.midi  smoke-out.mid  smoke.asc  smoke.hex
tests/midi/: README  api_names.cpp  cbmidiin.cpp  meson.build  midiclock.cpp  midiout.cpp  midiprobe.cpp  midiprobe.text  midiprobeex.cpp  play.cpp  qmidiin.cpp  smoke.cpp  sysextest.cpp  test_c_api.c
