#*****************************************************************************
# meson.options (rtl66)
#-----------------------------------------------------------------------------
##
# \file        meson.options
# \library     rtl66
# \author      Chris Ahlstrom
# \date        2022-06-07
# \updates     2024-04-28
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "rtl66" library.
#
#  Options for rtl66.  Still very tentative.
#
#-----------------------------------------------------------------------------

option('enable-alsa',
   type : 'boolean',
   value : true,
   description : 'Add ALSA to the MIDI API list in Linux builds'
)

option('enable-jack',
   type : 'boolean',
   value : true,
   description : 'Add JACK to the MIDI API list in Linux builds'
)

# option('jack-transport',
#    type : 'boolean',
#    value : true,
#    description : 'Build JACK transport code'
# )

option('enable-tests',
   type : 'boolean',
   value : true,
   description : 'Build the test program(s)'
)

# Still working on getting this to work. Actually, for now we prefer
# to use the command "./work.sh --pdf" to make the PDF. That is consistent
# with our other '66' libraries.

option('enable-docs',
   type : 'boolean',
   value : false,
   description : 'Build the LaTeX documentation'
   )

#-----------------------------------------------------------------------------
#  We do not need to append version numbers to the documents directory.
#-----------------------------------------------------------------------------

option('docdir',
   type : 'string',
   value : 'share/doc/cfg66',
   description : 'Directory where Rtl66 documentation is installed.',
   yield : true
)

option('potext',
   type : 'boolean',
   value : false,
   description : 'Build the linkage test program with potext_support.'
)

#****************************************************************************
# meson.options (rtl66)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
