#*****************************************************************************
# meson.build (rtl66)
#-----------------------------------------------------------------------------
##
# \file        doc/meson.build
# \library     rtl66
# \author      Chris Ahlstrom
# \date        2022-07-12
# \updates     2024-04-28
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "rtl66" library. See the top-level meson.build
#  file for license information.
#
#-----------------------------------------------------------------------------

subdir('latex')

#****************************************************************************
# meson.build (doc/rtl66)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
