#*****************************************************************************
# meson.build (rtl66)
#-----------------------------------------------------------------------------
##
# \file        tests/meson.build
# \library     rtl66
# \author      Chris Ahlstrom
# \date        2022-06-13
# \updates     2024-04-29
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "rtl66" library. See the top-level meson.build
#  file for license information.
#
#-----------------------------------------------------------------------------

if not get_option('enable-tests')
   subdir_done()
endif

subdir('midi')

#****************************************************************************
# meson.build (tests/rtl66)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------

