#*****************************************************************************
# meson.build (seq66/src)
#-----------------------------------------------------------------------------
##
# \file        src/meson.build
# \library     seq66
# \author      Chris Ahlstrom
# \date        2022-07-05
# \updates     2023-01-07
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "seq66" library. See the top-level meson.build
#  file for license information.
#
#  Here we locate the library source-code files.  They reside in:
#
#     -  src. The main include directory, currently nothing needed there.
#     -  src/cfg. Contains code for parsing command lines.
#
#-----------------------------------------------------------------------------

libseq66_sources += files(
   'midi/seqspec.cpp'
   )

#****************************************************************************
# meson.build (seq66/src)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
